--- a/Astro/Views/Base.lproj/Main.storyboard
+++ b/Astro/Views/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zpT-ih-wir">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zpT-ih-wir">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -59,32 +59,18 @@
                                     <outlet property="delegate" destination="fYu-MR-EPU" id="Pnt-7L-eU8"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sde-5C-0zK">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" id="lI8-Va-cDH"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Ogp-9E-5Xs" firstAttribute="top" secondItem="sde-5C-0zK" secondAttribute="bottom" id="A1X-rM-z4M"/>
-                            <constraint firstItem="Aqv-uu-aYp" firstAttribute="trailing" secondItem="sde-5C-0zK" secondAttribute="trailing" id="Qth-aq-9eF"/>
-                            <constraint firstItem="sde-5C-0zK" firstAttribute="top" secondItem="Aqv-uu-aYp" secondAttribute="top" id="WSo-BP-UVL"/>
                             <constraint firstItem="Aqv-uu-aYp" firstAttribute="bottom" secondItem="Ogp-9E-5Xs" secondAttribute="bottom" id="XIV-vC-sqF"/>
-                            <constraint firstItem="sde-5C-0zK" firstAttribute="leading" secondItem="Aqv-uu-aYp" secondAttribute="leading" id="Z8e-90-3c9"/>
                             <constraint firstItem="Ogp-9E-5Xs" firstAttribute="leading" secondItem="Aqv-uu-aYp" secondAttribute="leading" id="cux-Ww-gy1"/>
                             <constraint firstItem="Aqv-uu-aYp" firstAttribute="trailing" secondItem="Ogp-9E-5Xs" secondAttribute="trailing" id="f8D-co-Yfi"/>
+                            <constraint firstItem="Ogp-9E-5Xs" firstAttribute="top" secondItem="Aqv-uu-aYp" secondAttribute="top" id="weJ-WK-LQU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Aqv-uu-aYp"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="News" image="rocket" id="iOC-zH-7by"/>
                     <connections>
-                        <outlet property="messageLabel" destination="sde-5C-0zK" id="jE9-Ya-Rpr"/>
                         <outlet property="tableView" destination="Ogp-9E-5Xs" id="4HF-c1-slx"/>
                     </connections>
                 </viewController>
